--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>NUST Navigation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="leaflet.css" />
     <style>
         /* Updated CSS with mobile-first approach */
         body {
@@ -147,9 +147,9 @@
         </div>
     </div>
 
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
+    <script src="leaflet.js"></script>
+    <script src="leaflet-routing-machine.js"></script>
+    <link rel="stylesheet" href="leaflet-routing-machine.css" />
 
     <script>
         let map, routingControl, userLocation, userMarker;
@@ -165,14 +165,14 @@
             { name: "Office Block", code: "A17", lat: "-22.565307", lng: "17.077067" },
             { name: "Poly Heights [Staff Offices (Basement - 5th Floor / Staff Residence)]", code: "A18", lat: "-22.566221", lng: "17.077949" },
             { name: "Library and Information Services", code: "D1", lat: "-22.564569", lng: "17.075350" },
-            { name: "School of Engineering", code: "D2", lat: "-22.564876", lng: "-22.564876" },
+            { name: "School of Engineering", code: "D2", lat: "-22.565904", lng: "17.073306" },
             { name: "Auditoria Building", code: "D3", lat: "-22.564965", lng: "17.075042" },
             { name: "Science and Technology Building", code: "D4", lat: "-22.565646", lng: "17.074489" },
             { name: "Faculty of Health, Natural Resources and Applied Sciences", code: "E1", lat: "-22.566159", lng: "17.073728" },
             { name: "Department of Civil Mining and Process Engineering", code: "E2", lat: "-22.565896", lng: "17.073196" },
             { name: "Department of Architecture, Planning and Construction", code: "E3", lat: "-22.566020", lng: "17.073084" },
             { name: "High-Tech Transfer Plaza (HTTPs)", code: "E4", lat: "-22.566295", lng: "17.072987" },
-            { name: "Hotel School", code: "F1", lat: "", lng: "" },
+            { name: "Hotel School", code: "F1", lat: "-22.566620", lng: "17.072073" },
             { name: "Pre-Fabricated Classrooms", code: "F2", lat: "-22.566228", lng: "17.072298" },
             { name: "New Energy Efficient House", code: "F3", lat: "-22.566994", lng: "17.071756" },
             { name: "Teaching and Learning Unit", code: "J1", lat: "-22.568381", lng: "17.070646" },
